--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <title>Hello world</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <meta charset="UTF-8">
+        <title>Home</title>
     </head>
     <body>
-        Hello,world
-        <button type="button" class="btn btn-outline-secondary">Secondary</button>
+        <div>
+            <a href="academics.html">Academics</a> | 
+            <a href="personal.html">Personal</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="resume.html">Resume</a>
+        </div>
+        <div>
+        <h1>Student Data </h1>
+        <p>Name : Navneet Yadav</p>
+        <p>Id : 23f2002092</p>
+        <p>Self Intro : My name is Navneet Yadav. I love to play chess and listen music.</p>
+    </div>
+    <div>
+            <h5>Navneet Yadav | 2023 batch | copyright, 2024</h5>
+    </div>
     </body>
 </html>
