--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <a href="academics.html">Academics</a> | 
+            <a href="academics.html" style="color:cyan;">Academics</a> | 
             <a href="personal.html">Personal</a> | 
             <a href="contact.html">Contact</a> | 
             <a href="resume.html">Resume</a>
