--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             <a href="academics.html"">Academics</a> | 
             <a href="personal.html">Personal</a> | 
             <a href="contact.html">Contact</a> | 
-            <a href="resume.html">Resume</a>
+            <a href="resume.html">Resume</a> |
+            <a href="iitm.html">IITM</a>
         </div>
         <div>
         <h1>Student Data </h1>
