--- a/iitm.html
+++ b/iitm.html
@@ -133,6 +133,9 @@
     <div id="home">
       <h1 class="text-center mb-5">Welcome to IITM Work Tracker</h1>
       <p class="lead text-center">This app helps you keep track of your IITM coursework. Use the navigation bar to check your lectures, assignments, and upcoming exams.</p>
+      <div class="text-center mt-5">
+    <button class="btn btn-primary btn-lg" onclick="showPage('lectureCheck')">Start</button>
+      </div>
     </div>
     
   
