--- a/iitm.html
+++ b/iitm.html
@@ -128,6 +128,11 @@
       </div>
     </div>
   </nav>
+  <div class="container-fluid mt-2 mb-2">
+  <div class="progress" style="height: 20px;">
+    <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+  </div>
+  </div>
 
   <div class="container mt-5 fade-in" id="mainContent">
     <div id="home">
