--- a/iitm.html
+++ b/iitm.html
@@ -204,12 +204,16 @@
     };
 
     function showPage(pageId) {
-      document.querySelectorAll('.container > div').forEach(div => div.style.display = 'none');
-      document.getElementById(pageId).style.display = 'block';
-      if (pageId === 'assignmentCheck') {
-        loadAssignments();
-      }
-    }
+  document.querySelectorAll('.container > div').forEach(div => {
+    div.style.display = 'none';
+    div.classList.remove('fade-in');
+  });
+  const pageToShow = document.getElementById(pageId);
+  pageToShow.style.display = 'block';
+  setTimeout(() => pageToShow.classList.add('fade-in'), 10);
+  if (pageId === 'assignmentCheck') {
+    loadAssignments();
+  }
 
     function checkLectureProgress() {
       const completed = parseInt(document.getElementById('completedLectures').value);
