--- a/iitm.html
+++ b/iitm.html
@@ -97,6 +97,17 @@
       .btn {
         width: 100%;
       }
+      .progress {
+  background-color: #e9ecef;
+  border-radius: 10px;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
+}
+
+.progress-bar {
+  background-color: #007bff;
+  border-radius: 10px;
+  transition: width 0.5s ease;
+}
     }
   </style>
 </head>
