--- a/iitm.html
+++ b/iitm.html
@@ -218,7 +218,20 @@
   document.querySelectorAll('.container > div').forEach(div => {
     div.style.display = 'none';
     div.classList.remove('fade-in');
-  });
+  })};
+    updateProgressBar(pageId);
+}
+
+function updateProgressBar(pageId) {
+  const pages = ['home', 'lectureCheck', 'assignmentCheck', 'examCheck', 'finalCheck'];
+  const currentIndex = pages.indexOf(pageId);
+  const progress = (currentIndex / (pages.length - 1)) * 100;
+  
+  const progressBar = document.getElementById('progressBar');
+  progressBar.style.width = `${progress}%`;
+  progressBar.setAttribute('aria-valuenow', progress);
+  progressBar.textContent = `${Math.round(progress)}%`;
+}
   const pageToShow = document.getElementById(pageId);
   pageToShow.style.display = 'block';
   setTimeout(() => pageToShow.classList.add('fade-in'), 10);
