--- a/iitm.html
+++ b/iitm.html
@@ -254,7 +254,7 @@ function updateProgressBar(pageId) {
       const now = new Date();
       const remaining = 7 - now.getDay(); // Calculate remaining days until next Sunday
       
-      const required = Math.ceil((total * (7 - remaining)) / 5) - completed;
+      const required = Math.ceil((remaining-2)/(total-completed));
       const result = document.getElementById('lectureResult');
       
       if (required > 0) {
